# fluvio

./: Cargo.toml  Makefile  README.md  bors.toml
.github/workflows/: ci.yml  publish.yml  publish_latest.yml  release.yml
src/cli/completions/oh-my-zsh/fluvio/: README.md  fluvio.plugin.zsh
src/cli/src/: lib.rs
src/cli/src/consumer/consume/: mod.rs
src/cli/src/consumer/topic/: create.rs
src/cli/src/profile/sync/: local.rs
src/cluster/src/cli/spu/: register.rs
src/cluster/src/cli/start/: mod.rs  tls.rs
src/dataplane-protocol/src/: smartstream.rs
src/dataplane-protocol/src/fetch/: response.rs
src/extension-common/src/: tls.rs
src/sc/src/: cli.rs
src/smartstream/examples/: Cargo.toml
src/smartstream/examples/map_regex/: Cargo.toml
src/smartstream/examples/map_regex/src/: lib.rs
src/spu/src/config/: cli.rs
src/spu/src/services/public/: stream_fetch.rs
src/spu/src/smart_stream/: filter.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  main.rs
tests/integration/src/cli_test_drivers/: mod.rs  test_runner.rs
tests/integration/src/cli_test_drivers/setup/: mod.rs
tests/integration/src/cli_test_drivers/smoke/: consume.rs  produce.rs
tests/integration/src/fluvio-test-macro/: Cargo.toml
tests/integration/src/fluvio-test-macro/src/: fluvio_test_helpers.rs  lib.rs
tests/integration/src/fluvio-test-options/: Cargo.toml
tests/integration/src/tests/: smoke.rs
