[package]
name = "fluvio-test-macro"
version = "0.1.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0"

fluvio-cluster = { path = "../../../../src/cluster" }
fluvio-future = { version = "0.1.0" }
fluvio-test-options = { path = "../fluvio-test-options" }